tests/snapshots/validate__invalid__changed-without-version.snap
---
source: tests/validate.rs
expression: out.diagnostics()
---
ship::artifact::invalid

  × `changed-without-version.json` is not a valid release artifact (1 problem)
  help: see https://noirbizarre.github.io/gh-ship/specifications/release-
        artifact/

Error: ship::artifact::invalid

  × the artifact is missing `version` and `tag`
   ╭─[changed-without-version.json:1:1]
 1 │ ╭─▶ {
 2 │ │     "schemaVersion": 1,
 3 │ │     "changed": true
 4 │ ├─▶ }
   · ╰──── missing `version` and `tag`
   ╰────
  help: `changed: true` promises there is something to release, so `version`
        and `tag` are required. If there is nothing to release, set `changed:
        false` and omit them.
