tests/snapshots/validate__invalid__missing-schema-version.snap
---
source: tests/validate.rs
expression: out.diagnostics()
---
ship::artifact::invalid

  × `missing-schema-version.json` is not a valid release artifact (1 problem)
  help: see https://noirbizarre.github.io/gh-ship/specifications/release-
        artifact/

Error: ship::artifact::invalid

  × the artifact is missing `schemaVersion`
   ╭─[missing-schema-version.json:1:1]
 1 │ ╭─▶ {
 2 │ │     "changed": false
 3 │ ├─▶ }
   · ╰──── missing `schemaVersion`
   ╰────
  help: every artifact must declare `"schemaVersion": 1`
