tests/snapshots/validate__invalid__syntax-error.snap
---
source: tests/validate.rs
expression: out.diagnostics()
---
ship::artifact::json

  × invalid JSON in `syntax-error.json`: expected ident at line 4 column 0
   ╭─[syntax-error.json:4:1]
 3 │   "changed": tru
 4 │ }
   · ┬
   · ╰── here
   ╰────
  help: `ship.release.json` must be a single JSON object; check for trailing
        commas or unquoted keys
